1.删除 @BindTypeHandler 注解，已经可以有多种方式达成此注解的目的。 2.增加 Gson、Jackson 作为 JSON 序列化器，JsonTypeHandler 可以从 Fastjson、Fastjson2、Gson、Jackson 四者中自动选择提供者。 3.为符合命名规范：   - SqlXmlForInputStreamTypeHandler 更名为 SqlXmlAsInputStreamTypeHandler   - SqlXmlForReaderTypeHandler 更名为 SqlXmlAsReaderTypeHandler   - URITypeHandler 更名为 StringAsUriTypeHandler   - URLTypeHandler 更名为 StringAsUrlTypeHandler 4. 原有 MappedCross 注解删除，新增 MappedCrossTypes 并使用 jdbcType、javaType 属性替代原始 MappedJdbcTypes、MappedJavaTypes写法。 5. TypeHandlerRegistry中 registerCross 方法更名为 register 保持和其它 register 方法的名称统一性。 6. ColumnMapping、TableMapping 新增 getAnnotations 方法可以获取对应配置的注解信息 7. 新增 @Primary 注解当有多个 @Column 注解映射到同一个列时，可以通过 @Primary 表示出主要的。 8. 修复使用 JdbcTemplate 时使用特殊指定 TypeHandlerRegistry 不生效的问题。 9. DynamicContext 增添两个构造方法用于指定 MappingRegistry、TypeHandlerRegistry